Fix para alto contraste

--- a/sass/novo.sass
+++ b/sass/novo.sass
@@ -170,6 +170,7 @@ p,ul,select
   border: 0
   color: #fff
   font-size: $font-size-small
+  font-weight: 700
   padding-bottom: 0
   padding-left: $gutter * 0.5
   padding-right: $gutter * 0.5
@@ -795,12 +796,13 @@ h3.titulo-destaque
 .contrast
   background-color: #000
   color: #fff
-  h2,h3,h4,a,p,li,label,.label,.login i
-    color: #fff
-  a
-    text-decoration: underline
-  small
-    color: darken(#fff, 40%)
+  .container
+    h2,h3,h4,a,p,li,label,.label,.login i
+      color: #fff
+    a
+      text-decoration: underline
+    small
+      color: darken(#fff, 40%)
   .button,.show_body a,.login input.button,.box-category li
     background-color: #fff
     border-color: darken(#fff, 40%)
